<resources>
    <string name="app_name">Mobility Choices</string>
    <string name="action_settings">Settings</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="latitudeError">Latitude: An error occurred!</string>
    <string name="longitudeError">Longitude: An error occurred!</string>
    <string name="latitude">"Lat: "</string>
    <string name="longitude">"Lng: "</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="email_register_form">Email</string>
    <string name="password_register">Password</string>
    <string name="password_confirm_register">Confirm Password</string>
    <string name="username_register">Username</string>
    <string name="action_register">No account yet? Create one</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_logout">Logout</string>
    <string name="internalServerError">Internal Server Error! Try again later</string>

    <string name="google_maps_key">AIzaSyBD8loX-V1AmNeom6BwnfVvkw03iZSUe8M</string>
    <string name="ErrorNoLocationsInList">You have no positions tracked yet! Try again</string>
    <string name="title_activity_directions">Alternative Routes</string>
    <string name="show_alternative_routes">Show alternative routes!</string>
    <string name="startBtn">Start</string>
    <string name="show_all_my_tracks">Show all my tracks</string>
    <string name="title_activity_all_routes_activty">All My Routes</string>
    <string name="title_activity_maps_alternative">My Route</string>
</resources>
